--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-04-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC, AC_LIBTOOL_PROG_LD_SHLIBS)
+	[solaris]: Update wl for Sun Studio f77/f90/f95.  Fix
+	whole_archive_flag_spec for cc and f77/f90/f95 to prevent reordering in
+	case we link with $CC.
+
 2005-04-23  Gary Kumfert <kumfert@llnl.gov>
 
 	* libtool.m4 (AC_LIBTOOL_LANG_F77_CONFIG) [ aix4, aix5 ]:
