--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-25  Eric Blake  <ebb9@byu.net>  (tiny change)
+
+	* Makefile.am (ltdldatadir): Fix typo.
+
 2005-04-25  Gary V. Vaughan  <gary@gnu.org>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
