--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-04-25  Eric Blake  <ebb9@byu.net>  (tiny change)
 
+	* libltdl/configure.ac (AC_OUTPUT): loaders/Makefile.am is no
+	longer used.
+
 	* Makefile.am (ltdldatadir): Fix typo.
 
 2005-04-25  Gary V. Vaughan  <gary@gnu.org>,
