--- a/THANKS
+++ b/THANKS
@@ -92,6 +92,8 @@
   Peter Eisentraut		peter_e@gmx.net
   Peter Ekberg			peda@lysator.liu.se
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
+  Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
+  Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Stephan Kulow			coolo@kde.org
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
@@ -101,6 +103,7 @@
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
   Xavier Pianet			xavier@xingo.com
+  Пухальский Юрий Андреевич	pooh@cryptopro.ru
 
 
 * And, not forgetting everyone that was kind enough to spend time testing
