--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* HACKING: Updated.
+
 2005-04-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/convenience.at: Actually add.
