--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-04  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in [darwin]: Pass -framework for executables too.
+	Reported by Adam <adam@albedo.art.pl>
+
 2005-05-02  Andreas Schwab  <schwab@suse.de>
 
 	* libltdl/Makefile.am (local-install-files): Rename back from
