--- a/THANKS
+++ b/THANKS
@@ -103,7 +103,7 @@
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
   Xavier Pianet			xavier@xingo.com
-  Пухальский Юрий Андреевич	pooh@cryptopro.ru
+  Юрий Андреевич Пухальский	pooh@cryptopro.ru
 
 
 * And, not forgetting everyone that was kind enough to spend time testing
