--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG) [ aix ]: 
+	Fix wrong $ECHO use overlooked in 2005-04-27.  Simplify slightly.
+
 	* m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS,
 	_LT_LANG_CXX_CONFIG) [ linux ]: PGI: Backport whole_archive changes
 	from HEAD.  Add $pic_flag to archive_cmds and archive_expsyms_cmds.
