--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-31  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh: Do not add installed static litool libraries
+	to convenience, they are not convenience libraries.
+	Reported by Chen-Mou Cheng <chenmou.cheng@gmail.com>
+
 2005-05-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* THANKS: Updated.
