--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2004-05-31  Peter O'Gorman  <peter@pogma.com>
+2005-06-01  Olly Betts <olly@survex.com>  (tiny change)
+
+	* libltdl/argz.c (argz_create_sep): Fix typo.
+
+2005-05-31  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh: Do not add installed static litool libraries
 	to convenience, they are not convenience libraries.
