--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_COMPILER_OPTION, _LT_LINKER_OPTION): No
+	need for $ECHO here.  Fix sed script syntax to be portable.
+	This should now put the pic-flag right after the last $*FLAGS
+	variable again, if any.  Necessary for Fortran AC_FC_SRCEXT.
+
 2005-06-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_CONFIG_COMMANDS): Remove long lines.
