--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-21  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in [darwin]: Accept -arch flag.
+
 2005-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* ltmain.in: Add fully-qualified paths to temp_rpath
