--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-21  Peter O'Gorman  <peter@pogma.com>
+
+	* conig/ltmain.m4sh [darwin]: Accept -arch flag.
+
 2005-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_COMPILER_BOILERPLATE, _LT_LINKER_BOILERPLATE):
