--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/ltoptions.m4 (_LT_SET_OPTIONS): Remove unnecessary workaround for
+	CVS Automake bug (fixed).  Reported by Stepan Kasal <kasal@ucw.cz>.
+
 2005-06-21  Peter O'Gorman  <peter@pogma.com>
 
 	* conig/ltmain.m4sh [darwin]: Accept -arch flag.
